# Saccubus3

./: LICENSE  README.md
document_etc/doc/: QandA質問応答記録.txt  auto.txtサンプル.txt  readme+.txt  readme150.txt  ローカル変換追加説明.txt
filter/: .gitignore  CMakeLists.txt  mingw64-cross.cmake
filter/src/: framehook.c  framehook.h  main.c
filter/src/comment/: com_surface.c  render_unicode.c
filter/src/unicode/: unitable.h  uniutil.c
frontend/: .gitignore  build.gradle.kts  settings.gradle
frontend/src/main/java/saccubus/: ConvertWorker.java  ConvertingSetting.java  HtmlView.java  MainFrame.java  MainFrame_AboutBox.java  MylistGetter.java  TextView.java
frontend/src/main/java/saccubus/conv/: CombineXML.java  NicoXMLReader.java
frontend/src/main/java/saccubus/json/: Mson.java  NicoJsonParser.java
frontend/src/main/java/saccubus/net/: BrowserInfo.java  NicoClient.java  Path.java
frontend/src/main/java/saccubus/util/: PopupRightClick.java  Util.java
